--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+    --orange: #ff7000;
+    --blue: #004a76;
+    --dark-blue: #002d47;
+    --gray: rgba(88,89,89,1);
+    --light-gray: rgba(232,232,232,1);
+    --light-gray-2: rgba(247,247,247);
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+li {
+    list-style-type: none;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
